clusters/homelab/apps/pipe-dreams/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipe-dreams
  namespace: pipe-dreams
spec:
  selector:
    app: pipe-dreams
  ports:
    - port: 80
      targetPort: 3000
