clusters/homelab/apps/pipe-dreams/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipe-dreams
  namespace: pipe-dreams
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: pipes.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipe-dreams
                port:
                  number: 80
  tls:
    - hosts:
        - pipes.tafu.casa
      secretName: pipe-dreams-tls
